--- a/indexV2.html
+++ b/indexV2.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HISOKIX | Cyberpunk Creator</title>
-    <meta name="description" content="Professional Developer, Streamer & Digital Artist">
+    <title>Fullhook | Website developer</title>
+    <meta name="description" content="Unprofessional Developer, Degenerate & Editor">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --primary: #ff6ec4;
+            --primary: #ffffff;
             --secondary: #7873f5;
             --accent: #4ef0ff;
             --dark: #0a0a0a;
@@ -515,9 +515,9 @@
         <div class="profile-section">
             <img src="https://i.postimg.cc/0QwkR0hK/Cyberpunk-Anime-mit-drittem-Auge.png" 
                  class="profile-pic floating" 
-                 alt="Profilbild von HISOKIX">
-            <div class="name" id="glitch-name">HISOKIX</div>
-            <div class="title" id="glitch-title">Developer | Creator | Cyberpunk Enthusiast</div>
+                 alt="Fullhook">
+            <div class="name" id="glitch-name">Fullhook</div>
+            <div class="title" id="glitch-title">Developer | Editor | Music Enthusiast</div>
         </div>
 
         <div class="stats">
